# miko.rs

./: .env  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml  docker-publish.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_tables.rs
scripts/: build.sh
src/: config.rs  crypto.rs  lib.rs  main.rs
src/api/: auth.rs  handlers.rs  mod.rs  models.rs  web.rs
src/browser/: bookmarks.rs  browsing.rs  library.rs  mapper.rs  mod.rs  playlists.rs  search.rs  types.rs  utils.rs
src/lyric/: mod.rs
src/models/: album.rs  album_artist.rs  album_genre.rs  artist.rs  bookmark.rs  child.rs  genre.rs  lyrics.rs  mod.rs  music_folder.rs  now_playing.rs  play_queue.rs  play_queue_song.rs  playlist.rs  playlist_song.rs  queries.rs  song_artist.rs  song_genre.rs  user.rs  user_music_folder.rs  user_rating.rs  user_star.rs
src/scanner/: flusher.rs  flusher_tests.rs  mod.rs  scanner.rs  scanner_tests.rs  seen.rs  tags.rs  types.rs  utils.rs  walker.rs
src/service/: bookmarks.rs  browsing.rs  library.rs  lyrics.rs  mod.rs  musicbrainz.rs  playlists.rs  scrape.rs  search.rs  tag.rs  utils.rs
src/subsonic/: auth.rs  common.rs  middleware.rs  mod.rs  models.rs  utils.rs
tests/: scanner_integration.rs
web/: App.svelte  index.html  main.ts  router.ts  style.css
web/components/: AccountConnections.svelte  AppResources.svelte  ConnectionItem.svelte  CoverArt.svelte  DashboardCard.svelte  LibrarySearchForm.svelte  MainLayout.svelte  MusicFolders.svelte  Navbar.svelte  NowPlaying.svelte  ScanButton.svelte  Sidebar.svelte  StatCard.svelte
web/lib/: albumSort.svelte.ts  api.ts  auth.svelte.ts  librarySearch.ts  libraryView.ts  theme.svelte.ts  (+2 more)
(+41 files in other folders)
