[package]
name = "miko-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
sea-orm = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.36", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
md5 = "0.7"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
bcrypt = "0.15"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
