[package]
name = "miko-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "3", features = ["anyhow", "rustls", "static-files"] }
sea-orm = { version = "1.1.0", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.36", features = ["serialize"] }
jsonwebtoken = "9"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
md5 = "0.7"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
bcrypt = "0.15"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
lofty = "0.22.4"
walkdir = "2.5.0"
hex = "0.4.3"
mime_guess = "2.0.5"
pathdiff = "0.2.3"
mimalloc = "0.1"
regex = "1.10"
once_cell = "1.19"
ammonia = "4.0"
migration = { path = "migration" }
path-clean = "1.0.1"
rust-embed = "8.5.0"
sysinfo = "0.32"
async-trait = "0.1"
